# tiny-redirect

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.MD  README.md  autopytoexe.json  data.db  data.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tiny_redirect.bat  tiny_redirect.py  tr.py  win-build.ps1
js/: htmx.js
k8s/: deployment.yaml  pvc.yaml  service.yaml
packaging/linux/: instructions.md  iptables-settings.sh  uninstall.sh
packaging/win/: installer.nsi  win-build.bat
src/tiny_redirect/: __init__.py  __main__.py  app.py  data.py
src/tiny_redirect/static/css/: custom-styles.css
src/tiny_redirect/views/: error.stpl  header.stpl  import_result.stpl  js.stpl  navmenu.stpl  noalias.stpl  redirects.stpl  root.stpl  settings.stpl  shutdown.stpl
tests/: __init__.py  conftest.py  test_app.py  test_data.py
views/: about.stpl  footer.stpl  header.stpl  js.stpl  navmenu.stpl  new_page.stpl  page.stpl  redirects.stpl  root.stpl  search.stpl  settings.stpl  shutdown.stpl  testing.stpl
