[project]
name = "tiny-redirect"
version = "0.1.0"
description = "A lightweight URL redirect utility for local networks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Seth Stenzel"}
]
keywords = ["redirect", "url", "shortener", "local", "network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "bottle>=0.12.21",
    "pywin32>=304",
    "pystray>=0.19.5",
    "pillow>=10.0.0",
    "requests>=2.32.5",
    "nuitka>=2.0",
    "ordered-set>=4.1.0",
    "zstandard>=0.21.0",
    "auto-py-to-exe>=2.48.1",
    "loguru>=0.7.0",
    "psutil>=7.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "webtest>=3.0.0",
]

[project.scripts]
tiny-redirect = "tiny_redirect.app:main"

[project.urls]
Homepage = "https://github.com/sethstenzel/tiny-redirect"
Repository = "https://github.com/sethstenzel/tiny-redirect"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_redirect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
pythonpath = ["src"]
